[project]
name = "rag-chatbot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "streamlit>=1.58.0",
]
